# mini-svg-py

./: flake.nix
mini-svg/: pyproject.toml
mini-svg/examples/: 02_poligonos_y_estrellas.py  03_espiral_avanzada.py  04_mandala_radial.py  05_fractal_por_niveles.py  06_mosaico_checker.py  espiral.py
mini-svg/src/mini-svg/: __init__.py  mini_svg_v1.py  mini_svg_v2.py  mini_svg_v3.py
src/mini-svg/: README.md  pyproject.toml
src/mini-svg/examples/: 01_basico_patron.py  01_circulos_alternos.py  02_cuadricula_bandera.py  03_avanzado_espiral_mandala.py
src/mini-svg/src/mini_svg/: __init__.py  v1.py  v2.py  v3.py
src/mini_svg/: README.md
src/mini_svg/examples/: 04_bezier_facil.py
src/mini_svg/src/mini_svg/: mini_svg.py
