[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "svg-simple"
version = "0.1.0"
description = "Mini librería educativa para generar SVG con Python"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="Tu Nombre", email="tu@email.com"}]
keywords = ["svg", "education", "python", "inkscape"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

